Refactoring gap classes to prevent conflict with grid or fluid classes

--- a/src/grid/grid.css
+++ b/src/grid/grid.css
@@ -306,70 +306,70 @@
 }
 
 /***** 3 - Grid Gap *****/
-[class*="gap-"][class*="-1xs"] {
-  grid-gap: var(--gap-1xs);
+[class*="gap-"][class*="-small-xs"] {
+  grid-gap: var(--gap-small-xs);
 }
 
-[class*="gap-"][class*="-2xs"] {
-  grid-gap: var(--gap-2xs);
+[class*="gap-"][class*="-medium-xs"] {
+  grid-gap: var(--gap-medium-xs);
 }
 
-[class*="gap-"][class*="-3xs"] {
-  grid-gap: var(--gap-3xs);
+[class*="gap-"][class*="-large-xs"] {
+  grid-gap: var(--gap-large-xs);
 }
 
 @media (min-width: 576px) {
-  [class*="gap-"][class*="-1sm"] {
-    grid-gap: var(--gap-1sm);
+  [class*="gap-"][class*="-small-sm"] {
+    grid-gap: var(--gap-small-sm);
   }
 
-  [class*="gap-"][class*="-2sm"] {
-    grid-gap: var(--gap-2sm);
+  [class*="gap-"][class*="-medium-sm"] {
+    grid-gap: var(--gap-medium-sm);
   }
 
-  [class*="gap-"][class*="-3sm"] {
-    grid-gap: var(--gap-3sm);
+  [class*="gap-"][class*="-large-sm"] {
+    grid-gap: var(--gap-large-sm);
   }
 }
 
 @media (min-width: 768px) {
-  [class*="gap-"][class*="-1md"] {
-    grid-gap: var(--gap-1md);
+  [class*="gap-"][class*="-small-md"] {
+    grid-gap: var(--gap-small-md);
   }
 
-  [class*="gap-"][class*="-2md"] {
-    grid-gap: var(--gap-2md);
+  [class*="gap-"][class*="-medium-md"] {
+    grid-gap: var(--gap-medium-md);
   }
 
-  [class*="gap-"][class*="-3md"] {
-    grid-gap: var(--gap-3md);
+  [class*="gap-"][class*="-large-md"] {
+    grid-gap: var(--gap-large-md);
   }
 }
 
 @media (min-width: 992px) {
-  [class*="gap-"][class*="-1lg"] {
-    grid-gap: var(--gap-1lg);
+  [class*="gap-"][class*="-small-lg"] {
+    grid-gap: var(--gap-small-lg);
   }
 
-  [class*="gap-"][class*="-2lg"] {
-    grid-gap: var(--gap-2lg);
+  [class*="gap-"][class*="-medium-lg"] {
+    grid-gap: var(--gap-medium-lg);
   }
 
-  [class*="gap-"][class*="-3lg"] {
-    grid-gap: var(--gap-3lg);
+  [class*="gap-"][class*="-large-lg"] {
+    grid-gap: var(--gap-large-lg);
   }
 }
 
 @media (min-width: 1200px) {
-  [class*="gap-"][class*="-1xl"] {
-    grid-gap: var(--gap-1xl);
+  [class*="gap-"][class*="-small-xl"] {
+    grid-gap: var(--gap-small-xl);
   }
 
-  [class*="gap-"][class*="-2xl"] {
-    grid-gap: var(--gap-2xl);
+  [class*="gap-"][class*="-medium-xl"] {
+    grid-gap: var(--gap-medium-xl);
   }
 
-  [class*="gap-"][class*="-3xl"] {
-    grid-gap: var(--gap-3xl);
+  [class*="gap-"][class*="-large-xl"] {
+    grid-gap: var(--gap-large-xl);
   }
 }
